# ackl

./: .gitignore  .pylintrc  MANIFEST.in  README.md  demo.ipynb  dics.pkl  dics_hj.pkl  dics_salt.pkl  setup.cfg  todo.ipynb  vergalijo_20_varieties.csv
src/ackl/: __init__.py  kernels.py  metrics.py
src/ackl/gui/: run.py
src/ackl/gui/templates/: home.html
tests/: test_kernels.py
