[metadata]
name = ackl
version = 0.0.4
author = Yinsheng Zhang (Ph.D.)
author_email = oo@zju.edu.cn
description = A Python library for kernels used in analytical chemistry
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/zhangys11/ack
project_urls =
    Bug Tracker = https://github.com/zhangys11/ack/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Topic :: Scientific/Engineering :: Mathematics

[options]
include_package_data = True
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires =
    scikit-learn
    scipy
    matplotlib
    numpy

[options.packages.find]
where = src

[options.package_data]
* = *.txt, *.csv